validated reg and login form

--- a/style.css
+++ b/style.css
@@ -70,3 +70,9 @@ form, .content {
     border-radius: 5px;
     text-align: left;
 }
+.success {
+    color: #3c763d;
+    background-color: #dff0d8;
+    border: 1px solid #3c763d;
+    margin-bottom: 20px;
+}
